...
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:text="@{branch.branchCode > 0 ? branch.phoneNumber : null}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:text="@{branch.branchCode > 0 ? @string/update : @string/add}" />


...
