<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.casecode.domain.model.users.Business"/>
    <variable
        name="business"
        type="Business" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_business_type"
            style="@style/Widget.pos.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/store_type"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_store">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/actv_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:text="@{business.storeType.englishName}"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_business_mail"
            style="@style/Widget.pos.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:hint="@string/work_mail"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_business_type"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_business_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"

                android:text="@{business.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_business_phone"
            style="@style/Widget.pos.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:hint="@string/work_phone_number"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_business_mail"
            app:startIconDrawable="@drawable/ic_call">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_business_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"

                android:text="@{business.phone}" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>