...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading() ? View.INVISIBLE : View.VISIBLE}"
             />

        <Button
            android:id="@+id/btn_add_business_branches"
            style="@style/Widget.pos.Button.TextButton.icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_spacing"
            android:text="@string/branches"
            app:icon="@drawable/ic_arrow_left"
...
